docs: adjust tone to experimental and modest
- 🧪 Changed title to 'Experimental Hierarchical System'
- ⚠️ Added experimental status warnings throughout documentation
- 📝 Corrected author name to Victor Hugo Calle Gil
- 🎯 Adjusted role from 'Senior' to 'Data Scientist & ML Engineer'
- 🔬 Removed exaggerated claims about system effectiveness
- 📊 Reframed as research project testing instruction patterns
- 💡 Added realistic expectations and 'results may vary' disclaimers
- 🤝 Emphasized community feedback and testing approach

This reflects the true experimental nature of the project and sets appropriate expectations for users.

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -2,37 +2,37 @@ name: Validate Copilot Instructions
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   validate:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-    
-    - name: Run Copilot Best Practices Validator
-      run: |
-        python .github/instructions/copilot_best_practices_validator.py .
-        
-    - name: Check validation score
-      run: |
-        # Ensure score is at least 95%
-        python -c "
-        import json
-        with open('.github/instructions/copilot_best_practices_report_*.json') as f:
-            data = json.load(f)
-            score = data['overall_score']
-            if score < 95.0:
-                print(f'❌ Validation score {score}% is below 95% threshold')
-                exit(1)
-            else:
-                print(f'✅ Validation score {score}% meets quality standards')
-        "
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+
+      - name: Run Copilot Best Practices Validator
+        run: |
+          python .github/instructions/copilot_best_practices_validator.py .
+
+      - name: Check validation score
+        run: |
+          # Ensure score is at least 95%
+          python -c "
+          import json
+          with open('.github/instructions/copilot_best_practices_report_*.json') as f:
+              data = json.load(f)
+              score = data['overall_score']
+              if score < 95.0:
+                  print(f'❌ Validation score {score}% is below 95% threshold')
+                  exit(1)
+              else:
+                  print(f'✅ Validation score {score}% meets quality standards')
+          "
